# rotaviva

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: charts.py  config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/maps/: generate.py  grid.py  store.py
backend/app/maps/presets/: centro.json  cidade-exemplo.json  galpao-central.json  triangulo.json
backend/app/routing/: baselines.py  hill_climbing.py  tour.py
backend/app/runs/: store.py
backend/tests/: conftest.py  test_api.py  test_baselines.py  test_charts.py  test_generate.py  test_grid.py  test_hill_climbing.py  test_runs_store.py  test_store.py  test_tour.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  types.ts
frontend/src/components/: ConvergenceChart.tsx  CostMatrix.tsx  GridPainter.tsx  MapCanvas.tsx  MapEditor.tsx  MapGenerator.tsx  MapLegend.tsx  MapPicker.tsx  ResultsPanel.tsx  RunDetail.tsx  RunsList.tsx  StopList.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/: api.ts  grid.ts  sprites.ts
