[project]
name = "rotaviva-backend"
version = "0.1.0"
description = "RotaViva v0.1 backend — TSP route optimizer (Hill Climbing + Random Restart)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

# Treat this as an application, not an installable package.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
